Feat: User APIs
